codex-agent-bindings/csharp/src/CodexAgent/Interop/NativeMethods.cs

using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace CodexAgent.Interop;

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct NativeStringView
{
    internal byte* Data;
    internal nuint Size;
}

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct NativeClientInfo
{
    internal uint StructSize;
    internal NativeStringView Name;
    internal NativeStringView Title;
    internal NativeStringView Version;
}

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct NativeHostOptions
{
    internal uint StructSize;
    internal NativeStringView BundleDirectory;
    internal NativeStringView DataDirectory;
    internal NativeClientInfo ClientInfo;
}

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct NativePathWorkspaceSelection
{
    internal uint StructSize;
    internal NativeStringView Path;
}

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct NativeConversationOpenOptions
{
    internal uint StructSize;
    internal int HasConversationId;
    internal NativeStringView ConversationId;
    internal int HasApprovalPreset;
    internal CodexApprovalPreset ApprovalPreset;
    internal int HasServiceTier;
    internal NativeStringView ServiceTier;
}

internal static unsafe partial class NativeMethods
{
    internal const string LibraryName = "codex_agent";
    internal const uint AbiVersion = 0x010D0000;

    static NativeMethods() => NativeLibraryLoader.Initialize();

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_abi_version")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial uint GetAbiVersion();

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_abi_is_compatible")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int IsAbiCompatible(uint requestedVersion);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_context_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ContextCreate(out nint context);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_context_destroy")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ContextDestroy(ref nint context);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus HostCreateImport(nint context, NativeHostOptions* options, out nint host);
    internal static CodexStatus HostCreate(nint context, NativeHostOptions* options, out nint host)
    { var status = HostCreateImport(context, options, out host); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus HostRelease(nint context, ref nint host);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_start")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus HostStartImport(nint context, nint host, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus HostStart(nint context, nint host, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = HostStartImport(context, host, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_select_workspace")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus HostSelectWorkspaceImport(nint context, nint host, NativePathWorkspaceSelection* selection, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus HostSelectWorkspace(nint context, nint host, NativePathWorkspaceSelection* selection, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = HostSelectWorkspaceImport(context, host, selection, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_close")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus HostCloseImport(nint context, nint host, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus HostClose(nint context, nint host, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = HostCloseImport(context, host, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_state_get")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus HostStateGetImport(nint context, nint host, out nint snapshot);
    internal static CodexStatus HostStateGet(nint context, nint host, out nint snapshot)
    { var status = HostStateGetImport(context, host, out snapshot); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_host_state_subscribe")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus HostStateSubscribeImport(nint context, nint host, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription);
    internal static CodexStatus HostStateSubscribe(nint context, nint host, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription)
    { var status = HostStateSubscribeImport(context, host, callback, userData, out subscription); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_agent_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus AgentRelease(nint context, ref nint agent);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_agent_conversations")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus AgentConversationsImport(nint context, nint agent, out nint conversations);
    internal static CodexStatus AgentConversations(nint context, nint agent, out nint conversations)
    { var status = AgentConversationsImport(context, agent, out conversations); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversations_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationsRelease(nint context, ref nint conversations);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversations_active_get")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationsActiveGetImport(nint context, nint conversations, out nint snapshot);
    internal static CodexStatus ConversationsActiveGet(nint context, nint conversations, out nint snapshot)
    { var status = ConversationsActiveGetImport(context, conversations, out snapshot); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversations_active_subscribe")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationsActiveSubscribeImport(nint context, nint conversations, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription);
    internal static CodexStatus ConversationsActiveSubscribe(nint context, nint conversations, delegate* unmanaged[Cdecl]<nint, nint, CodexStatus, nint, int, nint, void> callback, nint userData, out nint subscription)
    { var status = ConversationsActiveSubscribeImport(context, conversations, callback, userData, out subscription); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversations_open")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationsOpenImport(nint context, nint conversations, NativeConversationOpenOptions* options, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationsOpen(nint context, nint conversations, NativeConversationOpenOptions* options, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationsOpenImport(context, conversations, options, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationRelease(nint context, ref nint conversation);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_is_same")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConversationIsSame(nint context, nint left, nint right, out int same);

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_send")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationSendImport(nint context, nint conversation, NativeStringView* prompt, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationSend(nint context, nint conversation, NativeStringView* prompt, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationSendImport(context, conversation, prompt, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_run_shell_command")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationRunShellCommandImport(nint context, nint conversation, NativeStringView* command, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationRunShellCommand(nint context, nint conversation, NativeStringView* command, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationRunShellCommandImport(context, conversation, command, callback, userData, out operation); RecordExactCall(); return status; }

    [LibraryImport(LibraryName, EntryPoint = "codex_agent_conversation_reload")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    private static partial CodexStatus ConversationReloadImport(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation);
    internal static CodexStatus ConversationReload(nint context, nint conversation, delegate* unmanaged[Cdecl]<nint, nint, nint, void> callback, nint userData, out nint operation)
    { var status = ConversationReloadImport(context, conversation, callback, userData, out operation); RecordExactCall(); return status; }
